<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Persistent part -->
    <FrameLayout
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/persistent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="7dp"
        android:paddingVertical="7dp">

        <!-- Coordinates, index, coordinate titles -->
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Coordinate Index -->
            <TextView
                android:paddingHorizontal="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/index"
                android:text="@string/indexplaceholder"
                android:textStyle="bold"
                android:textColor="@color/indexcolor" />

            <!-- Coordinates -->
            <LinearLayout
                android:weightSum="7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical">

                <!-- Coordinate title+angle -->
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/bottomTitle"
                        android:text="@string/bottom"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/indexcolor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/bottomAngle"
                        android:text="@string/placeholder"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!-- Coordinate title+angle -->
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/spineTitle"
                        android:text="@string/spine"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/indexcolor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/spineAngle"
                        android:text="@string/placeholder"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!-- Coordinate title+angle -->
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/tiltTitle"
                        android:text="@string/tilt"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/indexcolor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/tiltAngle"
                        android:text="@string/placeholder"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!-- Coordinate title+angle -->
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/mouthTitle"
                        android:text="@string/mouth"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/indexcolor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/mouthAngle"
                        android:text="@string/placeholder"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!-- Coordinate title+angle -->
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/gateTitle"
                        android:text="@string/gate"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/indexcolor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/coordinatetitle"
                        android:id="@+id/gateAngle"
                        android:text="~"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!-- just empty spacing to avoid angles appearing behind the play button -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <!-- Play Button -->
        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/play"
            android:layout_gravity="end|center_vertical"
            android:id="@+id/play"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </FrameLayout>

    <!-- Togglable part -->
    <LinearLayout
        android:paddingTop="10dp"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/toggleable"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- Down Button -->
        <TextView
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:text="@string/remove"
            android:textStyle="bold" />
        <!-- Up & Down -->
        <!-- Up Button -->
        <ImageView
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/up"
            android:layout_gravity="end|center_vertical"
            android:id="@+id/up"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <ImageView
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/down"
            android:layout_gravity="end|center_vertical"
            android:id="@+id/down"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <!-- Control buttons -->
        <TextView
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:text="Edit"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>